interconexion FULL Hecha

--- a/src/main/resources/templates/pagoOk.html
+++ b/src/main/resources/templates/pagoOk.html
@@ -8,6 +8,6 @@
 <h1>Pago Aceptado</h1>
 <h2>Razón del estado</h2>
 <p th:text="${msgOk}">Pago procesado correctamente.</p>
-<a th:href="@{/tienda/checkout}">Volver a la información del pedido</a>
+<a th:href="@{/productos}">Volver al listado de productos</a>
 </body>
 </html>
