--- a/src/main/resources/templates/pagoPend.html
+++ b/src/main/resources/templates/pagoPend.html
@@ -8,6 +8,6 @@
 <h1>Pago Pendiente</h1>
 <h2>Razón del estado</h2>
 <p th:text="${msgPend}">Pago pendiente</p>
-<a th:href="@{/tienda/checkout}">Volver a la información del pedido</a>
+<a th:href="@{/productos}">Volver al listado de productos</a>
 </body>
 </html>
