--- a/src/main/resources/templates/pagoRech.html
+++ b/src/main/resources/templates/pagoRech.html
@@ -8,6 +8,6 @@
 <h1>Pago rechazado</h1>
 <h2>Razón del estado</h2>
 <p th:text="${msgRech}">Pago rechazado.</p>
-<a th:href="@{/tienda/checkout}">Volver a la información del pedido</a>
+<a th:href="@{/productos}">Volver al listado de productos</a>
 </body>
 </html>
