--- a/src/main/resources/templates/paymentFormProxy.html
+++ b/src/main/resources/templates/paymentFormProxy.html
@@ -12,7 +12,7 @@
 
 <div th:utext="${paymentFormContent}"></div>
 
-<a href="/tienda/checkout">Volver a la información del pedido</a>
+<a th:href="@{/carrito}">Volver a la información del pedido</a>
 
 </body>
 </html>
